@@ -1,5 +1,11 @@
 2018-04-17  Martin Liska  <mliska@suse.cz>
 
+	PR lto/85405
+	* g++.dg/lto/pr85405_0.C: New test.
+	* g++.dg/lto/pr85405_1.C: New test.
+
+2018-04-17  Martin Liska  <mliska@suse.cz>
+
 	PR ipa/85329
 	* g++.dg/ext/pr85329-2.C: New test.
 	* g++.dg/ext/pr85329.C: New test.
