@@ -1,3 +1,8 @@
+2018-04-17  Jan Hubicka  <jh@suse.cz>
+
+	PR lto/85405
+	* ipa-devirt.c (odr_types_equivalent_p): Handle bit fields.
+
 2018-04-17  Martin Liska  <mliska@suse.cz>
 
 	PR ipa/85329
